<resources>
    <string name="app_name">BudgetTracker</string>
    <string name="net_balance">Net Balance</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="transactions">Transactions</string>
    <string name="savings">Savings</string>
    <string name="new_transaction">New Transaction</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="update">Update</string>

    <string-array name="types">
        <item>Savings</item>
        <item>Expense</item>
    </string-array>
</resources>