<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".EditTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/update_transaction"
            android:textAllCaps="true"
            android:textColor="@color/colorText1"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnClose2"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:background="@drawable/bg_close"
            android:contentDescription="@string/app_name"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUpTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUpTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_label"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUpAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:hint="@string/amount"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUpAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_money"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="numberDecimal|numberSigned"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUpDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:boxStrokeErrorColor="@color/material_red"
                app:errorEnabled="true"
                app:errorIconTint="@color/material_red"
                app:errorTextColor="@color/material_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUpDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/colorDrawable"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    tools:ignore="TextContrastCheck,UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:elevation="4dp"
                android:text="@string/update"
                android:visibility="gone"
                app:cornerRadius="8dp"
                app:elevation="4dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>